<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/desc" />
	<EditText android:id="@+id/desc" 
		android:layout_width="fill_parent"
		android:singleLine="true"
		android:layout_height="wrap_content"/>
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/app" />
	<EditText android:id="@+id/app" 
		android:layout_width="fill_parent"
		android:singleLine="true"
		android:layout_height="wrap_content"/>
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/interval" />
	<EditText android:id="@+id/interval" 
		android:layout_width="fill_parent"
		android:singleLine="true"
		android:layout_height="wrap_content"/>
		
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/record" 
			android:text="@string/record"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/report_view" 
			android:text="@string/report_view"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	
	</LinearLayout>

</LinearLayout>